--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,7 @@ message ("binary: " ${CMAKE_CURRENT_BINARY_DIR})
 set (CMAKE_EXPORT_COMPILE_COMMANDS ON)
 set (CMAKE_MODULE_PATH cmake)
 
-set (GCC_COMPILE_FLAGS "-std=c++11")
+set (GCC_COMPILE_FLAGS "-std=c++1z")
 
 set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${GCC_COMPILE_FLAGS}")
 
